2008-01-10  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.man: Update manual; added description of various new procedures
	* statistics.test: Added tests for Gamma and Poisson distributions
	* pdf-stat.tcl: Added procedures for Gamma and Poission distributions
	                (Feature requests by Eric K. Benedict)

2007-12-22  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* linalg.tcl: Corrected bug #1805912 (eigenvectorsSVD) by means of path #1852519
	* linalg.test: Added simple test case for eigenvectorsSVD
	* pkgIndex.tcl: Increased version number for linear algebra (1.0.3 now)

2007-12-11  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* special.tcl: Corrected implementation of Gamma function (reported by EKB)

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	*

2007-09-11  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* linalg.test: Corrected test that was linked to SF bug 1784637
	* linalg.tcl: Corrected case in matmul that was linked to SF bug 1784637

2007-09-06  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* linalg.tcl: Solved bug with matmul (SF bug 1784637)

2007-08-21  Andreas Kupries  <andreask@activestate.com>

	* math.test (matchTolerant): Changed to not use tcltest 2.0+
	  features in a testsuite for tcltest 1.0. Rewritten the tests
	  using this custom comparison command to be tcltest 1.0
	  compliant.

	* pkgIndex.tcl: With permission from Arjen moved math::statistics
	* bessel.test: into the 8.4 section. Due to its new dependency on
	* elliptic.test: math::linearalgebra via multi-variate linear
	* statistics.test: regression it now depends on Tcl 8.4+ too.
	* special.test: Updated the tests using math::statistics for this
	  as well.

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* bessel.test: Added missing dependency on math::linearalgebra.
	* elliptic.test: (For math::statistics). This not fully ok yet,